# modbus-server

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  database.db  modbus-map.json
cmake/: common.cmake
lib/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp  modbusdata.cpp  modbusdata.h  modbusmap.cpp  modbusmap.h  modbusregister.cpp  modbusregister.h
